src/objects/Teacher__c.object
<CustomObject>
    <description>Its teacher object. its public open for shearing,</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Enter Your age</description>
        <label>Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Enter date of joining</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pi__c</fullName>
        <description>Pick data as year of experiences.</description>
        <label>Picklist</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Experienced</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>New joiners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <description>Pick list</description>
        <label>Picklist</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fulltime</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Night-Shift</fullName>
                </value>
                <value>
                    <fullName>Parttime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select date</description>
        <label>Select Type</label>
        <type>Checkbox</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Teacher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EndDate_should_More_30Dstarting</fullName>
        <active>false</active>
        <description>End Date should be of any date up to 30 days from the Start Date</description>
        <errorConditionFormula>Value(TEXT((YEAR(  End_Date__c  )*12+ MONTH( End_Date__c ))- 
(YEAR(  Date__c  )*12+MONTH( Date__c  ))) ) &lt; 1</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Enter date should after 30 day.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDate_should_greater_Starting</fullName>
        <active>false</active>
        <description>End Date should be greater than the Start Date</description>
        <errorConditionFormula>Date__c &lt; End_Date__c = false</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Please Enter  start date Enter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_date_same_month</fullName>
        <active>false</active>
        <errorConditionFormula>MONTH( End_Date__c )  &lt;&gt;  MONTH( Date__c )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>please enter same date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_date_same_quarter</fullName>
        <active>false</active>
        <errorConditionFormula>value(text((YEAR( End_Date__c)*12) + MONTH( End_Date__c )- (YEAR( End_Date__c)*12) + MONTH(Date__c ))) &gt; 3</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date and Start Date In same Quarter</errorMessage>
    </validationRules>
</CustomObject>